--- a/_ngClient/index.html
+++ b/_ngClient/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
-<title>Investment Scraper</title> 
+<title>601 Investment Scraper</title> 
 <link href="css/main.css" rel="stylesheet" />
 <link rel="shortcut icon"   href="/favicon.ico"/>
 <link rel="stylesheet" href="/node_modules/angular-cookie-law/dist/angular-cookie-law.min.css">
@@ -32,7 +32,7 @@
             <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#home">Investment Scraper</a>
+                    <a class="navbar-brand" href="#home">601 Investment Scraper</a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
 									<li><a href="#home"><i>Home</i></a></li>
